--- a/index.html
+++ b/index.html
@@ -33,70 +33,70 @@
             <div class="grid">
                 <div class="producto" id="producto">
                     <a href="producto1.html">
-                        <img class="imagenproducto" src="img/producto1.png">
+                        <img class="imagenproducto" src="producto1.png">
                         <p class="nombre-producto">Róbalo</p>
                         <p class="precio"> Q35.°°</p>
                     </a>
                 </div>
                 <div class="producto">
                     <a href="producto2.html">
-                        <img class="imagenproducto" src="img/producto2.png">
+                        <img class="imagenproducto" src="producto2.png">
                         <p class="nombre-producto">Mojarra</p>
                         <p class="precio"> Q22.°°</p>
                     </a>
                 </div>
                 <div class="producto">
                     <a href="producto3.html">
-                        <img class="imagenproducto" src="img/producto3.png">
+                        <img class="imagenproducto" src="producto3.png">
                         <p class="nombre-producto">Jaiba</p>
                         <p class="precio"> Q30.°°</p>
                     </a>
                 </div>
                 <div class="producto">
                     <a href="producto4.html">
-                        <img class="imagenproducto" src="img/producto4.png">
+                        <img class="imagenproducto" src="producto4.png">
                         <p class="nombre-producto">Camarón</p>
                         <p class="precio"> Q35.°°</p>
                     </a>
                 </div>
                 <div class="producto">
                     <a href="producto5.html">
-                        <img class="imagenproducto" src="img/producto5.png">
+                        <img class="imagenproducto" src="producto5.png">
                         <p class="nombre-producto">Mejillón</p>
                         <p class="precio"> Q45.°°</p>
                     </a>
                 </div>
                 <div class="producto">
                     <a href="producto6.html">
-                        <img class="imagenproducto" src="img/producto6.png">
+                        <img class="imagenproducto" src="producto6.png">
                         <p class="nombre-producto">Caracol</p>
                         <p class="precio"> Q65.°°</p>
                     </a>
                 </div>
                 <div class="producto" id="footer2">
                     <a href="producto7.html">
-                        <img class="imagenproducto" src="img/producto7.png">
+                        <img class="imagenproducto" src="producto7.png">
                         <p class="nombre-producto">Mixto</p>
                         <p class="precio"> Q55.°°</p>
                     </a>
                 </div>
                 <div class="producto">
                     <a href="producto8.html">
-                        <img class="imagenproducto" src="img/producto8.jpg">
+                        <img class="imagenproducto" src="producto8.jpg">
                         <p class="nombre-producto">Pulpo</p>
                         <p class="precio"> Q40.°°</p>
                     </a>
                 </div>
                 <div class="producto">
                     <a href="producto9.html">
-                        <img class="imagenproducto" src="img/producto9.png">
+                        <img class="imagenproducto" src="producto9.png">
                         <p class="nombre-producto">Calamar</p>
                         <p class="precio"> Q40.°°</p>
                     </a>
                 </div>
                 <div class="producto">
                     <a href="producto10.html">
-                        <img class="imagenproducto" src="img/producto10.png">
+                        <img class="imagenproducto" src="producto10.png">
                         <p class="nombre-producto">Juilin</p>
                         <p class="precio"> Q22.°°</p>
                     </a>
