--- a/producto3.html
+++ b/producto3.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tiendita online</title>
-    <link rel="stylesheet" href="cssproducto.css">
+    <title>Mariqueria Marycruz</title>
+    <link rel="styleset" href="cssproducto.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
@@ -24,7 +24,7 @@
             <div class="overlay">
         <h1>MARISQUERIA</h1>
         <center>
-            <img class="imagen1" src="img/producto3.png">
+            <img class="imagen1" src="producto3.png">
         </center>
             <p class="nombre-producto">Jaiba</p>
                 <p class="precio"> Q22.°°</p>
