--- a/producto8.html
+++ b/producto8.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tiendita online</title>
+    <title>Marisqueria Marycruz</title>
     <link rel="stylesheet" href="cssproducto.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
             <div class="overlay">
         <h1>MARISQUERIA</h1>
         <center>
-            <img class="imagen1" src="img/producto8.jpg">
+            <img class="imagen1" src="producto8.jpg">
         </center>
             <p class="nombre-producto">Pulpo</p>
                 <p class="precio"> Q40.°°</p>
