--- a/producto9.html
+++ b/producto9.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tiendita online</title>
+    <title>Marisqueria Marycruz</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="cssproducto.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
             <div class="overlay">
         <h1>MARISQUERIA</h1>
         <center>
-            <img class="imagen1" src="img/producto9.png">
+            <img class="imagen1" src="producto9.png">
         </center>
             <p class="nombre-producto">Calamar</p>
                 <p class="precio"> Q40.°°</p>
