--- a/producto2.html
+++ b/producto2.html
@@ -31,15 +31,10 @@
                 
     
         <form class="formulario">
-            <select class="formulario__campo" name="" id="">
-                <option>Libras</option>
-            </select>
-            <input class="formulario__campo" type="number" placeholder="Cantidad" min="1">
+            <input class="formulario__campo" type="number" placeholder="Libras" min="1">
         </form>
         </div>
         </main>
-        <br>
-        <br>
         <br>
         <br>
         <br>
